
classDiagram
    direction TB
    
    %% Core Classes
    class Task {
        -task_id: str
        -name: str
        -category: str
        -duration: int
        -priority: int
        -preferred_window: Optional[TimeRange]
        -deadline_time: Optional[Time]
        -frequency: str
        -notes: Optional[str]
        -enabled: bool
        -completed: bool
        -due_date: Optional[date]
        +score(owner, pet) float
        +is_feasible(remaining_minutes) bool
        +mark_complete(owner, pet, create_next) Optional[Task]
        +requires_exact_time() bool
        +expand_occurrences(base_date) List[TimeRange]
    }
    
    class Owner {
        -owner_id: str
        -name: str
        -daily_time_available: int
        -preferred_windows: List[TimeRange]
        -preferences: Dict[str, Any]
        -tasks: List[Task]
        +available_minutes() int
        +allows(task) bool
        +window_options(task) List[TimeRange]
        +update_time_available(minutes) void
    }
    
    class Pet {
        -pet_id: str
        -name: str
        -species: str
        -age_years: float
        -activity_level: str
        -health_notes: Optional[str]
        -owner: Optional[Owner]
        -tasks: List[Task]
        +add_task(task) void
        +adjust_duration(task) int
        +is_task_recommended(task) bool
        +default_tasks() List[Task]
    }
    
    class ScheduledTask {
        -task: Task
        -start: Time
        -end: Time
        -note: Optional[str]
    }
    
    class Scheduler {
        -strategy: str
        -weights: Dict[str, float]
        -explain: bool
        -score_cache: Dict[str, float]
        +get_score_cached(task, owner, pet) float
        +rank_tasks(owner, pet, tasks) List[Task]
        +sort_by_time(tasks) List[Task]
        +filter_tasks(tasks, completed) List[Task]
        +filter_tasks_by_pet(pets, pet_name, completed) List[Task]
        +detect_conflicts(scheduled) List[str]
        +generate_plan(owner, pet, tasks) Dict[str, Any]
        +select_tasks(owner, pet, ranked) Tuple[List[Task], List[Tuple[Task, str]]]
        +build_explanations(selected, skipped) List[str]
    }
    
    %% Relationships
    Owner "1" -- "*" Task: manages
    Owner "1" -- "*" Pet: owns
    Pet "1" -- "*" Task: has
    ScheduledTask "1" --> "1" Task: wraps with times
    
    %% Scheduler uses
    Scheduler --> Owner: evaluates
    Scheduler --> Pet: adjusts
    Scheduler --> Task: scores & sorts
    Scheduler --> ScheduledTask: creates
